# framework.system.system-popup

./: CMakeLists.txt
crash-popup/: CMakeLists.txt
crash-popup/micro-src/: CMakeLists.txt  crash.c  crash.h  org.tizen.crash-popup.efl
crash-popup/src/: CMakeLists.txt  crash.c  crash.h  org.tizen.crash-popup.efl
data/: org.tizen.crash-popup.xml  org.tizen.datausage-syspopup.xml  org.tizen.lowbat-syspopup.xml  org.tizen.lowmem-syspopup.xml  org.tizen.mmc-syspopup.xml  org.tizen.poweroff-syspopup.xml  org.tizen.system-signal-sender.xml  org.tizen.system-syspopup.xml  org.tizen.usb-syspopup.xml  org.tizen.usbotg-syspopup.xml
datausage-popup/: CMakeLists.txt
datausage-popup/src/: datausage.c
edcs/: crash.edc  lite-poweroff.edc  lowbatt.edc  micro-common.edc  micro-poweroff.edc  poweroff.edc  system.edc
lowbatt-popup/: CMakeLists.txt
lowbatt-popup/micro-src/: CMakeLists.txt  lowbatt.c  lowbatt.h  org.tizen.lowbat-syspopup.efl
lowmem-popup/: CMakeLists.txt
lowmem-popup/micro-src/: CMakeLists.txt  lowmem.c  org.tizen.lowmem-syspopup.efl
mmc-popup/: CMakeLists.txt
mmc-popup/src/: mmc.c  mmc.h
mobile/: CMakeLists.txt
mobile/lowbatt-popup/: CMakeLists.txt
mobile/lowmem-popup/: CMakeLists.txt
mobile/mmc-popup/: CMakeLists.txt
mobile/poweroff-popup/: CMakeLists.txt
mobile/usb-popup/: CMakeLists.txt
mobile/usbotg-popup/: CMakeLists.txt
packaging/: org.tizen.crash-popup.manifest  org.tizen.datausage-syspopup.efl  org.tizen.datausage-syspopup.manifest  org.tizen.host-devices.efl  org.tizen.host-devices.manifest  org.tizen.mmc-syspopup.efl  org.tizen.system-signal-sender.efl  org.tizen.system-signal-sender.manifest  org.tizen.system-syspopup.efl  org.tizen.system-syspopup.manifest  org.tizen.usb-syspopup.efl  org.tizen.usb-syspopup.manifest  org.tizen.usbotg-syspopup.efl  org.tizen.usbotg-syspopup.manifest  system-apps.manifest  system-popup.spec
po/: CMakeLists.txt
popup-launcher/: CMakeLists.txt
popup-launcher/micro-src/: CMakeLists.txt  app.c  launcher.c  launcher.h  system-apps.efl
poweroff-popup/: CMakeLists.txt
poweroff-popup/micro-src/: CMakeLists.txt  device-options.c  device-options.h  double-data-flightmode.c  double-data-mobiledata.c  double-data.c  double-data.h  flightmode.c  org.tizen.poweroff-syspopup.rule  power-off.c  power-saving.c  sound_outdoor.c
poweroff-popup/src/: CMakeLists.txt  org.tizen.poweroff-syspopup.efl  poweroff.c
share/: common.c  common.h  micro-common.c  micro-common.h
signal-sender/: CMakeLists.txt  org.tizen.system-signal-sender.efl  org.tizen.system-signal-sender.xml  signal-sender.c  signal-sender.h
src/: CMakeLists.txt  README  org.tizen.system-syspopup.efl  org.tizen.system-syspopup.xml
src/battery/: lowbattery-micro.c  lowbattery-mobile.c  lowbattery.c
src/common/: core.c  macro.h  popup-common-internal.h  popup-common.c  popup-common.h  popup-ui-micro-b2.c  popup-ui-micro-b3.c  popup-ui-micro-circle.c  popup-ui-micro.c  popup-ui-normal.c  popup-ui.c  popup-ui.h
src/cooldown/: cooldown-micro.c  cooldown-mobile.c  cooldown.c
src/crash/: CMakeLists.txt  crash.c  org.tizen.crash-popup.efl  org.tizen.crash-popup.xml
src/datausage/: datausage-micro.c  datausage-mobile.c  datausage.c
src/flightmode/: flightmode.c
src/launcher/: CMakeLists.txt  app.c  launcher.c  launcher.h  noti.c
src/mmc/: mmc-mobile.c
src/mobiledata/: mobiledata.c
src/ode/: ode-mobile.c
src/poweroff/: CMakeLists.txt  org.tizen.poweroff-syspopup.efl  org.tizen.poweroff-syspopup.xml  poweroff.c
src/recovery/: recovery-mobile.c
src/storage/: lowstorage-micro.c  lowstorage-mobile.c
src/usb/: usb-device.c  usb-mobile.c  usbotg-mobile.c
src/usbhost-devices/: CMakeLists.txt  host-devices.c  org.tizen.host-devices.efl  org.tizen.host-devices.xml
src/usbhost-devices/edcs/: host-devices.edc
src/watchdog/: watchdog.c
sys-device-noti/: CMakeLists.txt  sys-device-noti.c  sys-device-noti.h
system-popup/: CMakeLists.txt
system-popup/src/: CMakeLists.txt  acc-assistive-light.c  acc-negative-colors.c  acc-tts.c  acc-zoom.c  accessibility.c  accessibility.h  brightness.c  cooldown_poweroff.c  cooldown_poweron.c  core.c  core.h  ode_error.c  recovery.c  safemode.c  usbotg_mount_failed.c  usbotg_removed_unsafe.c  watchdog.c
system-servant/: CMakeLists.txt  system-servant.c
test/: CMakeLists.txt  test.c
usb-popup/: CMakeLists.txt
usb-popup/src/: usb-syspopup.c  usb-syspopup.h
usbhost-devices/: CMakeLists.txt  host-devices.c
usbhost-devices/data/: org.tizen.host-devices.xml
usbotg-popup/: CMakeLists.txt
usbotg-popup/src/: usbotg-syspopup.c  usbotg-syspopup.h
wearable/: CMakeLists.txt
wearable/crash-popup/: CMakeLists.txt
wearable/crash-popup/micro-src/: CMakeLists.txt  crash.c  org.tizen.crash-popup.rule
wearable/data/: org.tizen.crash-popup.xml  org.tizen.lowbat-syspopup.xml  org.tizen.lowmem-syspopup.xml
wearable/edcs/: micro-poweroff.edc
wearable/lowbatt-popup/: CMakeLists.txt
wearable/lowbatt-popup/micro-src/: CMakeLists.txt  lowbatt.c  org.tizen.lowbat-syspopup.rule
wearable/lowmem-popup/: CMakeLists.txt
wearable/lowmem-popup/micro-src/: CMakeLists.txt  lowmem.c  org.tizen.lowmem-syspopup.rule
wearable/po/: CMakeLists.txt
wearable/po/micro-src/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  (+35 more)
wearable/popup-launcher/: CMakeLists.txt
wearable/popup-launcher/micro-src/: CMakeLists.txt  launcher.c  launcher.h  popup.c  system-apps.rule
wearable/poweroff-popup/: CMakeLists.txt
wearable/poweroff-popup/micro-src/: CMakeLists.txt  device-options.c  device-options.h  org.tizen.poweroff-syspopup.rule  org.tizen.system.popup.poweroff.service  power-saver.c  restart.c  sound_outdoor.c
wearable/share/: micro-common.c  micro-common.h
wearable/sys-device-noti/: CMakeLists.txt  sys-device-noti-micro.c  sys-device-noti.c
(+154 files in other folders)
